--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-188956910-1');
+</script>
+
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
     <meta name="description" content="Home Remodeling Contractor in Cedar Falls, IA">
     <meta name="keywords" content="home remodeling cedar falls, home remodeling cedar valley, t.e.a.m. builders cedar falls">
@@ -52,7 +62,7 @@
     </div>
     <div class="fade">
       <div><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/team-builders-deck.png"></div>
-      <div><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/Website-roofing-final.png"></div>
+      <div><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/IMG_0819-hero.jpg"></div>
     </div>
 	</div>
       <div id="main-content-service-cards-interior">
@@ -100,7 +110,7 @@
           </div>
           <div class="service-card mr">
             <div class="service-card-header">
-              <h3><a href="/decks">Decks</a></h3>
+              <h3><a href="/deck-pergolas">Decks</a></h3>
             </div>
             <div class="service-card-image">
               <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Decks">
@@ -147,7 +157,7 @@
     <div class="below-main-content">
       <h1>Make Your House Look Like New</h1>
       <h3>SCHEDULE A CONSULTATION WITH A REMODELING CONTRACTOR IN CEDAR FALLS, IA</h3>
-      <p style="">Our home remodeler should be the top choice for your home renocation project. With more than a decade of experience, the crew at TEAM Builders LTD has what it takes to transform your current house into your dream home. There is no project too big or too small for us.</p>
+      <p style="">Our home remodeler should be the top choice for your home renovation project. With more than a decade of experience, the crew at TEAM Builders LTD has what it takes to transform your current house into your dream home. There is no project too big or too small for us.</p>
       <p>Call 319-481-8326 now to discuss your design ideas with a skilled remodeling contractor in Cedar Falls, IA</p>
       <br />
       <a href="/process" class="btn btn-primary">Our Process</a>
