--- a/our-work.html
+++ b/our-work.html
@@ -8,6 +8,16 @@
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="description" content="See our process come to life by viewing work done by T.E.A.M. Builders in Cedar Falls, IA">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-188956910-1');
+</script>
+
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
   </head>
   <body>
@@ -76,6 +86,7 @@
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/final-fence.png" alt="Final Fence">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/nichols-fence.png" alt="Nichols Fence">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/1557250048495_fence_4.png" alt="Fence">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/IMG_4690.jpg" alt="Black Wire Fence">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
@@ -84,8 +95,6 @@
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Clay Roof">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-3.jpg" alt="Roof 3">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Roof 4">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Roof 5">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Roof 6">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
@@ -120,6 +129,10 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Pergolas</div>
               <div data-content>
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/IMG_0810.jpg" alt="Stained Wood Pergola">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/IMG_0812.jpg" alt="Stained Wood Pergola">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/IMG_0819.jpg" alt="Stained Wood Pergola Full Perspective">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/IMG_0821.jpg" alt="Stained Wood Pergola w/ Bench">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p1.jpg" alt="Wood Home Pergola">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Pergola with Shingles">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p12.jpg" alt="Wood Home Pergola">
