--- a/pergolas.html
+++ b/pergolas.html
@@ -7,6 +7,16 @@
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="description" content="T.E.A.M. Builders LTD has experience building custom pergolas of all kinds on properties in the Cedar Falls, IA area. Rely on us to build your custom deck quickly and correctly.">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-188956910-1');
+</script>
+
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
   </head>
   <body>
@@ -56,16 +66,12 @@ Increase your property value with a long lasting and maintenance-free deck/pergo
     <br />
       <div class="text-align-left">
           <br />
-          <!-- <h4 class="h1">Before & After</h4>
-          <div class="ba-slider">
-            <img src="/images/home/bathroom.jpeg" alt="">       
-            <div class="resize">
-              <img src="/images/home/basement.jpeg" alt="">
-            </div>
-            <span class="handle"></span>
-          </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/IMG_0810.jpg" alt="Stained Wood Pergola">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/IMG_0812.jpg" alt="Stained Wood Pergola">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/IMG_0819.jpg" alt="Stained Wood Pergola Full Perspective">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/IMG_0821.jpg" alt="Stained Wood Pergola w/ Bench">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Wood Home Pergola">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p12.jpg" alt="Wood Home Pergola">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p19.jpg" alt="Pergola with Metal Base">
