--- a/roofing.html
+++ b/roofing.html
@@ -8,6 +8,16 @@
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="description" content="T.E.A.M. Builders LTD provides roof installation and repair services in the Cedar Falls, IA area.">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-188956910-1');
+</script>
+
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
   </head>
   <body>
@@ -256,10 +266,8 @@
           </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-3.jpg" alt="Clay Tile Roof">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-1.jpg" alt="Roofing">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-2.jpg" alt="Roofing">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-3.jpg" alt="Roofing">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Roofing">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_4.png" alt="Roofing">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0220.JPG" alt="Roofing">
