--- a/shed-homes.html
+++ b/shed-homes.html
@@ -3,11 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>T.E.A.M. Builders Ltd.</title>
+    <title>Shed Homes | T.E.A.M. Builders Ltd.</title>
     <link rel="shortcut icon" type="image/png" href="https://teambuilders-media.s3.us-east-2.amazonaws.com/favicon.png">
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="description" content="At T.E.A.M. Builders Ltd. We aren't just skilled craftsmen, but visionaries and love helping clients dreams come to fruition. If you can dream it, we can help visualize it, and together we can build it!">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-188956910-1');
+</script>
+
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
   </head>
   <body>
@@ -20,7 +30,6 @@
     </div>
 </div>
 <div class="subpage-content">
-  <!-- <img src="/images/work/shed-houses/Shed-Home-Custom-Frames.jpg" alt="Custom Framing Options"> -->
   <h2>Wood & Steel Hybrid</h2>
     <p>We take the strength of steel and combine it with the flexibility of wood. As a result, we have one of the most premier building skeletons in the world!
     </p>
