--- a/siding.html
+++ b/siding.html
@@ -8,6 +8,15 @@
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="description" content="T.E.A.M. Builders LTD specializes in siding installation and repair services in the Cedar Falls, IA area. You can count on us to remove your unsightly siding and replace it with quality vinyl siding that matches your home perfectly.">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-188956910-1');
+</script>
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
   </head>
   <body>
@@ -21,6 +30,10 @@
 </div>
 <div class="subpage-content">
   <h2>Arrange for siding installation in Cedar Falls, IA</h2>
+    <video class="siding-video" controls>
+       <source src="https://teambuilders-media.s3.us-east-2.amazonaws.com/siding.mp4" type="video/mp4">
+       Your browser does not support the video tag.
+    </video>
     <div class="steps-container">
             <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/snap-photos.png" alt="Snap Photos">
             <h2>Snap a Few Photos</h2>
@@ -72,14 +85,6 @@ Will protect your home from the elements</p>
             <li>Splurge on a few high-end materials</li>
             <li>Create the look of your dream home</li>
           </ol>
-          <!-- <h4 class="h1">Before & After</h4>
-          <div class="ba-slider">
-            <img src="/images/home/bathroom.jpeg" alt="">       
-            <div class="resize">
-              <img src="/images/home/basement.jpeg" alt="">
-            </div>
-            <span class="handle"></span>
-          </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png" alt="New Blue Siding">
