--- a/about-t-e-a-m-builders.html
+++ b/about-t-e-a-m-builders.html
@@ -8,8 +8,18 @@
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="description" content="T.E.A.M. Builders Ltd. began in the summer of 2017 when Trevor Engels, owner of Engels Repair and Remodel, and Austin Maginnis, construction entrepreneur, decided to join forces to create a construction team like none other in the Cedar Valley.">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-      <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-188956910-1');
+</script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
   <script src="js/script.js"></script>
   <script src="js/loadTemplate.js"></script>
   </head>
