--- a/contact-us.html
+++ b/contact-us.html
@@ -13,6 +13,16 @@
       <!-- Scripts -->
       <script src="js/script.js"></script>
       <script src="js/loadTemplate.js"></script>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-188956910-1');
+</script>
+
     </head>
   <body>
     <!-- <div id="preloader"></div> -->
@@ -70,9 +80,5 @@
   <a href="#calendly-scheduler" id="calendly-scheduler" class="btn btn-calendly calendly-scheduler">Setup an Initial Call!<span class="powered-by"> Powered by Calendly</span></a>
   <footer id="footer">
   </footer>
-  <div class="calendly">
-    <a href="#calendly-scheduler-close" id="calendly-scheduler-close" class="btn"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</a>
-    <iframe src="https://calendly.com/aoneil12?embed_domain=teambuilderslimited.com&embed_type=PopupWidget" width= "100%" height="100%" frameborder="0">
-  </div>
   </body>
 </html>
