--- a/interior-remodeling.html
+++ b/interior-remodeling.html
@@ -8,10 +8,19 @@
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="description" content="Home Remodeling Contractor in Cedar Falls, IA">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-188956910-1');
+</script>
+
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
   </head>
   <body>
-    <!-- <div id="preloader"></div> -->
     <nav id="navbar"></nav>
     <div class="hero-nav interior-remodeling">
     <div class="hero-nav__inner">
@@ -30,7 +39,7 @@
           <div class="col mr-5">
             <h3>Bring your remodeling vision to life</h3>
             <p>Home is where the heart is—so turn your house into a home you’ll love. When you hire the pros at T.E.A.M. Builders Ltd., you can rest assured your house is in great hands. We’ve helped many homeowners with their <a href="/kitchen-renovations" class="green-link">kitchens</a>, <a href="/bathroom-renovations" class="green-link">bath</a>, and <a href="/basement-renovations" class="green-link">basement/home</a> additions renovations in Cedar Falls, IA. We’ll make your home the envy of the neighborhood for a price that fits your budget.</p>
-            <p>Call us at <a href="tel:3194818326" class="green-link"">319-481-8326</a> now to speak with a pro about your kitchens and basement/home additions remodeling ideas in Cedar Falls, IA.</p>
+            <p>Call us at <a href="tel:3194818326" class="green-link">319-481-8326</a> now to speak with a pro about your kitchens and basement/home additions remodeling ideas in Cedar Falls, IA.</p>
             <div class="feature-container">
                 <div class="feature">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
