--- a/kitchen-renovations.html
+++ b/kitchen-renovations.html
@@ -8,6 +8,16 @@
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="description" content="T.E.A.M. Builders Ltd. completes kitchen renovations in Cedar Falls, IA and surrounding areas. Hire us to transform your outdated kitchen into a modern space you’ll enjoy spending time in for years to come.">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-188956910-1');
+</script>
+
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
   </head>
   <body>
@@ -72,14 +82,6 @@
             <li>Lower your energy bills</li>
           </ol>
           <br />
-          <!-- <h4 class="h1">Before & After</h4>
-          <div class="ba-slider">
-            <img src="/images/home/bathroom.jpeg" alt="">       
-            <div class="resize">
-              <img src="/images/home/basement.jpeg" alt="">
-            </div>
-            <span class="handle"></span>
-          </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpeg" alt="New Kitchen Island">
