new insurance claims page

--- a/insurance-claims.html
+++ b/insurance-claims.html
@@ -37,10 +37,12 @@
       <br/>
       <p>Additionally, you are aware people are not always fairly compensated and oftentimes short changed in this process. You want to make sure that your insurance will cover the cost of the contractor that will be making the repairs so you don’t owe anything out of pocket (rightfully so, as you have been paying your deductibles) You want things to be right and get your home back to its pre-loss conditions.</p>
       <br />
-      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/insurance-claims-1.png" alt="Insurance Claim Scenario">
-      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/insurance-claims-2.png" alt="Insurance Claim Scenario">
-      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/insurance-claims-3.png" alt="Insurance Claim Scenario">
-      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/insurance-claims-4.png" alt="Insurance Claim Scenario">  
+      <div id="insurance-claims">
+        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/insurance-claims-1.png" alt="Insurance Claim Scenario">
+        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/insurance-claims-2.png" alt="Insurance Claim Scenario">
+        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/insurance-claims-3.png" alt="Insurance Claim Scenario">
+        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/insurance-claims-4.png" alt="Insurance Claim Scenario">  
+        </div>
     </div>
     <br />
   </div>
