--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <nav id="navbar"></nav>
   <div class="covid-accordion alert" data-accordion>
   <a href="tel:3194818326" class="mobile-tel"><i class="fa fa-phone"></i> (319) 481-8326</a>
+  <a href="/insurance-claims" class="insurance-claims-alert">Need help with an insurance claim?</a>
   <div data-control><p class="accordion-toggle">Trends, Ideas, Inspiration &amp; Products from T.E.A.M. Builders</p></div>
   <div data-content>
     <div id="mc_embed_signup">
@@ -53,18 +54,18 @@
       <h2>GET IN TOUCH WITH TEAM BUILDERS LTD NOW</h2>
       <a href="tel:3194818326" class="btn btn-primary">Call Now</a>
     </div>
-    <div id="main-content-service-selector-wrapper">
-      <div id="main-content-service-selector">
-        <div id="select-interior" class="menu active"><a href="#interior-remodeling">Interior Remodeling</a></div>
-        <div id="select-exterior" class="menu"><a href="#exterior-remodeling">Exterior Remodeling</a></div>
-        <div id="select-new-construction" class="menu"><a href="#new-construction">New Construction</a></div>
-      </div>
-    </div>
     <div class="fade">
       <div><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/team-builders-deck.png"></div>
       <div><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/IMG_0819-hero.jpg"></div>
     </div>
-	</div>
+    </div>
+    <div id="main-content-service-selector-wrapper">
+        <div id="main-content-service-selector">
+          <div id="select-interior" class="menu active"><a href="#interior-remodeling">Interior Remodeling</a></div>
+          <div id="select-exterior" class="menu"><a href="#exterior-remodeling">Exterior Remodeling</a></div>
+          <div id="select-new-construction" class="menu"><a href="#new-construction">New Construction</a></div>
+        </div>
+      </div>
       <div id="main-content-service-cards-interior">
       <!-- <div class="service-card">
         <div class="service-card-header">
@@ -163,7 +164,7 @@
       <a href="/process" class="btn btn-primary">Our Process</a>
     </div>
     <div class="below-main-content-image">
-      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/our-process.png" alt="Our Process">
+      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/our-process-1.png" alt="Our Process">
     </div>
   </section>
 
