--- a/index.html
+++ b/index.html
@@ -29,25 +29,11 @@
     <meta property "og:image:alt" content="T.E.A.M. Builders Logo" />  
   </head>
   <body>
+<div class="covid-accordion alert" data-accordion>
+    <a href="tel:3194818326"><i class="fa fa-phone"></i> (319) 481-8326</a>
+    <a href="/insurance-claims" class="insurance-claims-alert">Need help with an insurance claim?</a>
+</div>
   <nav id="navbar"></nav>
-  <div class="covid-accordion alert" data-accordion>
-  <a href="tel:3194818326" class="mobile-tel"><i class="fa fa-phone"></i> (319) 481-8326</a>
-  <a href="/insurance-claims" class="insurance-claims-alert">Need help with an insurance claim?</a>
-  <div data-control><p class="accordion-toggle">Trends, Ideas, Inspiration &amp; Products from T.E.A.M. Builders</p></div>
-  <div data-content>
-    <div id="mc_embed_signup">
-        <form action="https://teambuilderslimited.us2.list-manage.com/subscribe/post?u=3505b437145ee33b184d2b30a&amp;id=5ee4451a83" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-            <div id="mc_embed_signup_scroll">
-        <label for="mce-EMAIL">Discover Trends, Ideas, Inspiration &amp; Products</label>
-        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email address" required>
-            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3505b437145ee33b184d2b30a_5ee4451a83" tabindex="-1" value=""></div>
-            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-secondary"></div>
-            </div>
-        </form>
-    </div>
-  </div>
-  </div>
 	<div id="main-content">
     <div id="hero-text">
       <h1>Ready to Renovate Your House?</h1>
