--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
     <div id="hero-text">
       <h1>Ready to Renovate Your House?</h1>
       <h2>GET IN TOUCH WITH TEAM BUILDERS LTD NOW</h2>
-      <a href="tel:3194818326" class="btn btn-primary">Call Now</a>
+      <div id="hero-buttons">
+        <a href="tel:3194818326" class="btn btn-primary">Call Now</a>
+        <a href="/contact-us" class="btn btn-secondary">Get a Quote</a>
+      </div>
     </div>
     <div class="fade">
       <div><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/team-builders-deck.png"></div>
