--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   </head>
   <body>
 <div class="covid-accordion alert" data-accordion>
-    <a href="tel:3194818326"><i class="fa fa-phone"></i> (319) 481-8326</a>
-    <a href="/insurance-claims" class="insurance-claims-alert">Need help with an insurance claim?</a>
+    <a href="tel:3194818326"><i class="fa fa-phone"></i> (319) 481-8326</a> | <a href="/insurance-claims" class="insurance-claims-alert">Need help with an insurance claim?</a>
+
 </div>
   <nav id="navbar"></nav>
 	<div id="main-content">
@@ -56,14 +56,6 @@
         </div>
       </div>
       <div id="main-content-service-cards-interior">
-      <!-- <div class="service-card">
-        <div class="service-card-header">
-          <h3><a href="/bathroom-renovations">Bathroom</a></h3>
-        </div>
-        <div class="service-card-image">
-          <img src="images/work/bathroom-renovations/bathroom-2.png" alt="Bathroom">
-        </div>
-      </div> -->
       <div class="service-card mr-20">
         <div class="service-card-header">
           <h3><a href="/basement-renovations">Basement</a></h3>
