--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="fade">
       <div><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/team-builders-deck.png"></div>
-      <div><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/IMG_0819-hero.jpg"></div>
+      <!-- Put images here to add them to the slider  -->
     </div>
     </div>
     <div id="main-content-service-selector-wrapper">
