--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<div id="main-content">
     <div id="hero-text">
       <h1>We make your space a reflection of who you are</h1>
-      <h2>Reimagined home and workspace solutionss</h2>
+      <h2>Reimagined home and workspace solutions</h2>
       <div id="hero-buttons">
         <a href="tel:3194818326" class="btn btn-primary">Call Now</a>
         <a href="/contact-us" class="btn btn-secondary">Get a Quote</a>
