--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta property "og:image:height" content="50" />  
     <meta property "og:image:alt" content="T.E.A.M. Builders Logo" />  
   </head>
-  <body>
+  <body class="home">
 <div class="covid-accordion alert" data-accordion>
     <a href="tel:3194818326"><i class="fa fa-phone"></i> (319) 481-8326</a>
     <a href="/insurance-claims" class="insurance-claims-alert">Need help with an insurance claim?</a>
