google reviews widget

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <h2>Reimagined home and workspace solutions</h2>
       <div id="hero-buttons">
         <a href="tel:3194818326" class="btn btn-primary">Call Now</a>
-        <a href="/contact-us" class="btn btn-secondary">Get a Quote</a>
+        <a href="#apply" class="btn btn-secondary">We're Hiring</a>
       </div>
     </div>
     <div class="fade">
@@ -228,7 +228,15 @@
       <a href="/referral" class="btn btn-secondary">Learn More</a>
     </div>
   </section>
-  <section id="contactus">
+  <section id="contactus"></section>
+  <section class="gradient-banner" id="apply">
+     <div class="gradient-content">
+      <span>
+        We're Hiring! View our open positions below
+      </span>
+      <div class="triangle"></div>
+      <a href="https://forms.gle/AS5xo8zWHebxkY1e7" class="btn btn-secondary">Apply</a>
+    </div>
   </section>
   <footer id="footer">
   </footer>
