update basement page, contact us page, nav menu

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <h2>Reimagined home and workspace solutions</h2>
       <div id="hero-buttons">
         <a href="tel:3194818326" class="btn btn-primary">Call Now</a>
-        <a href="#footer" class="btn btn-secondary">We're Hiring</a>
+        <a href="#apply" class="btn btn-secondary">We're Hiring</a>
       </div>
     </div>
     <div class="fade">
@@ -229,7 +229,7 @@
     </div>
   </section>
   <section id="contactus"></section>
-  <section class="gradient-banner">
+  <section class="gradient-banner" id="apply">
      <div class="gradient-content">
       <span>
         We're Hiring! View our open positions below
