--- a/our-work.html
+++ b/our-work.html
@@ -50,8 +50,17 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Basement Renovations</div>
               <div data-content>
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/Stairs-Inside.jpg" alt="Basement Renovation">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg" alt="Basement Renovation Flooring and Stairs">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/Stairs-Inside.jpg" alt="Basement Remodel">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg" alt="Basement Remodel">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-cover.jpg" alt="Basement Renovation">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-barn-door.jpg" alt="Basement Barn Door">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-bathroom.jpg" alt="Basement Bathroom">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-bedroom.jpg" alt="Basement Bedroom">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-gym-full-view.jpg" alt="Basement Gym - Full View">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-gym.jpg" alt="Basement Gym">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-living-room.jpg" alt="Basement Living Room">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-with-barn-door.jpg" alt="Basement w/ Barn Door">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-work-space.jpg" alt="Basement Workspace">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
