--- a/basement-renovations.html
+++ b/basement-renovations.html
@@ -63,18 +63,19 @@
     </div>
       <div class="text-align-left">
           <br />
-          <!-- <h4 class="h1">Before & After</h4>
-          <div class="ba-slider">
-            <img src="/images/home/bathroom.jpeg" alt="">       
-            <div class="resize">
-              <img src="/images/home/basement.jpeg" alt="">
-            </div>
-            <span class="handle"></span>
-          </div> -->
           <h4 class="h1" id="our-work">Our Work</h4>
           <div class="our-work-images">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/Stairs-Inside.jpg" alt="Basement Remodel">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg" alt="Basement Remodel">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-cover.jpg" alt="Basement Renovation">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-barn-door.jpg" alt="Basement Barn Door">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-bathroom.jpg" alt="Basement Bathroom">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-bedroom.jpg" alt="Basement Bedroom">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-gym-full-view.jpg" alt="Basement Gym - Full View">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-gym.jpg" alt="Basement Gym">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-living-room.jpg" alt="Basement Living Room">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-with-barn-door.jpg" alt="Basement w/ Barn Door">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-work-space.jpg" alt="Basement Workspace">
           </div>
       </div>
     </div>
