--- a/our-work.html
+++ b/our-work.html
@@ -83,18 +83,18 @@
             <div class="our-work-accordion" data-accordion>
               <div data-control>Fences</div>
               <div data-content>
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/final-fence.png" alt="Final Fence">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/nichols-fence.png" alt="Nichols Fence">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/1557250048495_fence_4.png" alt="Fence">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/final-fence.png" alt="Final Fence">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/nichols-fence.png" alt="Nichols Fence">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/1557250048495_fence_4.png" alt="Fence">
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/IMG_4690.jpg" alt="Black Wire Fence">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
              <div data-control>Roofing</div>
               <div data-content>
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Clay Roof">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-3.jpg" alt="Roof 3">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Roof 4">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Clay Roof">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-3.jpg" alt="Roof 3">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Roof 4">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
@@ -133,20 +133,20 @@
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/IMG_0812.jpg" alt="Stained Wood Pergola">
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/IMG_0819.jpg" alt="Stained Wood Pergola Full Perspective">
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/IMG_0821.jpg" alt="Stained Wood Pergola w/ Bench">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p1.jpg" alt="Wood Home Pergola">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Pergola with Shingles">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p12.jpg" alt="Wood Home Pergola">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p19.jpg" alt="Pergola with Metal Base">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p20.jpg" alt="Pergola with Metal Base">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p1.jpg" alt="Wood Home Pergola">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Pergola with Shingles">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p12.jpg" alt="Wood Home Pergola">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p19.jpg" alt="Pergola with Metal Base">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p20.jpg" alt="Pergola with Metal Base">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
              <div data-control>Siding</div>
               <div data-content>
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png" alt="New Siding in Cedar Falls, IA">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_1.jpg" alt="Siding Blue House">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_2.png" alt="Siding Beige House">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_3.jpg" alt="Siding Tan House">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png" alt="New Siding in Cedar Falls, IA">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_1.jpg" alt="Siding Blue House">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_2.png" alt="Siding Beige House">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_3.jpg" alt="Siding Tan House">
               </div>
             </div>
           </div>
@@ -159,24 +159,24 @@
             <div class="our-work-accordion" data-accordion>
               <div data-control>Shed Houses "Shouses"</div>
               <div data-content>
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png" alt="Farm Shed">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/shed-loft.png" alt="Shed Loft">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/red-shed.png" alt="Red Shed">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png" alt="Farm Shed">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/shed-loft.png" alt="Shed Loft">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/red-shed.png" alt="Red Shed">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
              <div data-control>Agricultural & Commercial Buildings</div>
               <div data-content>
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/7.png" alt="Agricultural Building">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/9.png" alt="Agricultural Building">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/farm-shed.png" alt="Farm Shed">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/7.png" alt="Agricultural Building">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/9.png" alt="Agricultural Building">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/farm-shed.png" alt="Farm Shed">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
              <div data-control>Event Venues</div>
               <div data-content>
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-1.png" alt="Event Venue 1">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-2.png" alt="Event Venue 2">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-1.png" alt="Event Venue 1">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-2.png" alt="Event Venue 2">
               </div>
             </div>
           </div>
