--- a/contact-us.html
+++ b/contact-us.html
@@ -14,7 +14,22 @@
       <script src="js/script.js"></script>
       <script src="js/loadTemplate.js"></script>
       <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171264631-1">
+    </script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-171264631-1');
+    </script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-188956910-1');
+    </script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
