--- a/our-work.html
+++ b/our-work.html
@@ -9,14 +9,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="description" content="See our process come to life by viewing work done by T.E.A.M. Builders in Cedar Falls, IA">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171264631-1">
+    </script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'UA-188956910-1');
-</script>
+    gtag('config', 'UA-171264631-1');
+    </script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-188956910-1');
+    </script>
 
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
   </head>
@@ -100,31 +108,8 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Decks</div>
               <div data-content>
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/new-deck-floorplan.png" alt="New Deck Floorplan">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/DJI_0140.JPG" alt="Drone Shot of Backyard Deck Addition">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Spacious Backyard Deck Addition">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/pp13.jpg" alt="Multilevel Deck">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/Night-1.jpg" alt="Deck with Stair Lights">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/backyard-deck.png" alt="Backyard Deck">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/brown-deck-black-railings.png" alt="Brown Deck with Black Railings">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/dark-wood-finish-deck.png" alt="Deck with Dark Wood Finish">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-railings.png" alt="Deck Railings">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-railings-2.png" alt="Deck Railings 2">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-stairs-with-lights-daytime.png" alt="Deck Stairs with Lights During the Day">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-stairs-with-lights.png" alt="Deck Stairs with Lights">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-unfinished-wood.png" alt="Deck with Unfinished Wood">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-with-unifinished-wood.png" alt="Deck with Unfinished Wood 2">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-with-inground-pool.png" alt="Deck with Inground Pool">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-with-lights.png" alt="New Deck Renovation with Lights">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-with-modern-railings.png" alt="Deck with Modern Railings">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/gray-deck-stairs.png" alt="Gray Deck Stairs">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/gray-deck-white-railings.png" alt="Gray Deck with White Railings">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/gray-deck-with-stairs.png" alt="Gray Deck Stairs">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/large-backyard-deck.png" alt="Large Backyard Deck">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/new-furnished-deck-renovation.png" alt="New Furnished Deck Renovation">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/overhead-deck-renovation.png" alt="Overhead View of Deck Renovation">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/tall-gray-deck.png" alt="Tall Gray Deck">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/wraparound-deck-renovation.png" alt="Wraparound Deck Renovation">              </div>
+                              
+              </div>
             </div>
             <div class="our-work-accordion" data-accordion>
              <div data-control>Pergolas</div>
